objects/Observation_Form__c.object
<CustomObject>
    <fields>
        <fullName>Proper_Signature__c</fullName>
        <label>Proper Signature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proper_Spelling__c</fullName>
        <label>Proper Spelling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proper_Spelling_of_Customer_Name__c</fullName>
        <label>Proper Spelling of Customer Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proper_Spelling_of_Cuustomer_Name_Email__c</fullName>
        <inlineHelpText>Proper Spelling of Customer Name/Updating Name in Profile Field</inlineHelpText>
        <label>Proper Spelling of Customer Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proper_Ticket_Coding__c</fullName>
        <inlineHelpText>Chat: Zendesk, Email: Additionally Updating Name in Profile Field.</inlineHelpText>
        <label>Proper Ticket Coding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proper_Ticket_Note_Taking__c</fullName>
        <inlineHelpText>Zendesk.</inlineHelpText>
        <label>Proper Ticket Note Taking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proper_Understanding_of_Issue__c</fullName>
        <label>Proper Understanding of Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provide_Correct_Information__c</fullName>
        <label>Provide Correct Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provided_Options__c</fullName>
        <label>Provided Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Brand_Name__c</fullName>
        <label>State Brand Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Your_Name__c</fullName>
        <label>State Your Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <label>Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Structure_Phone_Total__c</fullName>
        <formula>(IF( ISPICKVAL(  Ownership_Call__c , "Pass")  ||  ISPICKVAL( Ownership_Call__c , "N/A")  , 1, 0 ) +  IF( ISPICKVAL(  Proper_Understanding_of_Issue__c  , "Pass")  ||  ISPICKVAL(  Proper_Understanding_of_Issue__c  , "N/A")  , 1, 0) +  IF( ISPICKVAL(  Provide_Correct_Information__c  , "Pass")  ||  ISPICKVAL( Provide_Correct_Information__c , "N/A")  , 1, 0))  /  3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Structure Total % (Phone)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Structure_Total_Chat__c</fullName>
        <formula>(IF( ISPICKVAL(  Proper_Spelling__c , "Pass")  ||  ISPICKVAL(  Proper_Spelling__c , "N/A")  , 1, 0 ) +  IF( ISPICKVAL(  Proper_Grammar__c  , "Pass")  ||  ISPICKVAL(  Proper_Grammar__c  , "N/A")  , 1, 0) +  IF( ISPICKVAL(   Ownership__c  , "Pass")  ||  ISPICKVAL(  Ownership__c , "N/A")  , 1, 0))  /  3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Structure Total % (Chat)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Structure_Total_Email__c</fullName>
        <formula>(IF( ISPICKVAL(  Proper_Spelling__c  , "Pass") || ISPICKVAL( Proper_Spelling__c , "N/A") , 1, 0 ) + IF( ISPICKVAL(  Proper_Grammar__c , "Pass") || ISPICKVAL(  Proper_Grammar__c  , "N/A") , 1, 0) + IF( ISPICKVAL(  Proper_Formatting__c  , "Pass") || ISPICKVAL( Proper_Formatting__c , "N/A") , 1, 0) +  IF( ISPICKVAL( Ownership_Email__c , "Pass")  ||  ISPICKVAL( Ownership_Email__c , "N/A")  , 1, 0) ) / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Structure Total % (Email)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Talking_Over_Customer__c</fullName>
        <label>Talking Over Customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thanking_Customer__c</fullName>
        <label>Thanking Customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ticket__c</fullName>
        <formula>Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tone_and_Warmth__c</fullName>
        <label>Tone and Warmth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Chat_Observation_Score__c</fullName>
        <formula>IF( RecordType.DeveloperName = "Chat_Observation_Form",( Opening_Total_Chat__c + Structure_Total_Chat__c + Etiquette_Total__c + Handling_Skills_Total_Chat__c + Procedures_Total_Chat__c + Closing_Total_Chat__c ) / 6, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Chat Observation Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Email_Observation_Score__c</fullName>
        <formula>IF( OR(RecordType.DeveloperName = "Email_Observation_Form", RecordType.DeveloperName = "Email_Observation_Form_True_Co"), (Opening_Total_Email__c + Structure_Total_Email__c + Etiquette_Total__c + Handling_Skills_Total__c + Procedures_Total_Email__c + Closing_Total_Email__c) /6, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Email Observation Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Phone_Observation_Score__c</fullName>
        <formula>IF( RecordType.DeveloperName = "Phone_Observation_Form",( Greeting_Total__c + Structure_Phone_Total__c + Phone_Etiquette_Total__c + Call_Handling_Skills_Total__c + Order_Management_Total__c + Procedures_Total_Phone__c + Closing_Total_Phone__c ) / 7, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Phone Observation Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Transition_Statement__c</fullName>
        <label>Transition Statement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Of_Inappropriate_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if answer is "Yes."</inlineHelpText>
        <label>Use of Inappropriate Language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_of_Customer_Name__c</fullName>
        <label>Use of Customer Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_of_Positive_Words__c</fullName>
        <label>Use of Positive Words</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verbal_Nods__c</fullName>
        <label>Verbal Nods</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_ID_Not_Obtained__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if answer is "Yes."</inlineHelpText>
        <label>Web ID Not Obtained With Order Placement</label>
        <type>Checkbox</type>
    </fields>
    <label>Observation Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Case_Owner__c</columns>
        <columns>Case_Intake_Channel__c</columns>
        <columns>Auto_Fail__c</columns>
        <columns>Total_Email_Observation_Score__c</columns>
        <columns>Total_Chat_Observation_Score__c</columns>
        <columns>Total_Phone_Observation_Score__c</columns>
        <columns>Case_Origin__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>PVH_Corp</role>
            <role>Supervisor_Tier_3_CSR</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Observation_Forms</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Case_Owner__c</columns>
        <columns>Case_Intake_Channel__c</columns>
        <columns>Auto_Fail__c</columns>
        <columns>Total_Email_Observation_Score__c</columns>
        <columns>Total_Chat_Observation_Score__c</columns>
        <columns>Total_Phone_Observation_Score__c</columns>
        <columns>Case_Origin__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>My Observation Forms</label>
    </listViews>
    <nameField>
        <displayFormat>Observation-{0000}</displayFormat>
        <label>Observation Form</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Observation Forms</pluralLabel>
    <recordTypes>
        <fullName>Chat_Observation_Form</fullName>
        <active>true</active>
        <description>Customer Service Chat Observation Form Scorecard</description>
        <label>Chat Observation Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email_Observation_Form</fullName>
        <active>true</active>
        <description>Customer Service Email Observation Form Scorecard and Summary.</description>
        <label>Email &amp; Web Observation Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email_Observation_Form_True_Co</fullName>
        <active>true</active>
        <description>True &amp; Co - Customer Service Email Observation Form Scorecard and Summary.</description>
        <label>Email &amp; Web Observation Form - True &amp; Co</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phone_Observation_Form</fullName>
        <active>true</active>
        <description>Customer Service Phone Observation Form Scorecard and Summary</description>
        <label>Phone Observation Form</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>